# cmake-project-template

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: cmake-build.yml
cmake/: dependency.cmake
include/test/: test.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
